--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="most_anticipated">Most anticipated</string>
     <string name="top_rated">Top rated</string>
     <string name="most_popular">Most popular</string>
+    <string name="emitted_state">State: </string>
+    <string name="emitted">Emitted: </string>
+    <string name="finished">Finished: </string>
+    <string name="synopsis">Synopsis</string>
+    <string name="no_synopsis">There aren\'t synopsis yet!</string>
+    <string name="overview">Overview</string>
+    <string name="chapters">Chapters</string>
+    <string name="characters">Characters</string>
 </resources>
